复习线程同步（synchronized/Reentrantlock)、lambda表达式

--- a/sc240601/JavaSE/src/day2/README/线程同步.md
+++ b/sc240601/JavaSE/src/day2/README/线程同步.md
@@ -14,8 +14,8 @@
 
 
 ### 3. Java实现线程安全的方式
-> * b. 使用synchronized关键字
-> * a. 添加线程的同步锁
+> * b. 使用synchronized关键字来添加线程的同步锁
+> * a. 使用Reentrantlock类来添加线程的同步锁
 
 ## 二、Synchronized关键字的使用
 > synchronized关键字用于方法或代码块，使其变为 `同步方法` 、`同步代码块`。
@@ -60,3 +60,14 @@
 ### 3. 公平锁 和 非公平锁
 ### 4. 乐观锁 和 悲观锁
 ### 5. 死锁
+
+### 6. synchronized和lock的区别
+a. 结构不同：
+b. 等待机制不同：
+c. 锁的使用方法不同：
+d. 唤醒方式不同：
+e. 锁的种类不同；
+f. 性能不同：
+![img_29.png](img_29.png)
+![img_30.png](img_30.png)
+![img_31.png](img_31.png)
