复习Java中的反射和类的加载机制。

--- a/sc240601/JavaSE/src/day5/README/反射.md
+++ b/sc240601/JavaSE/src/day5/README/反射.md
@@ -1,22 +1,25 @@
 ## 反射
 
 ### 一、什么是反射
-
+> 反射就是可以通过`类的描述`来`动态`地获取类中的资源。
 ![image-20240628113600944](img\image-20240624101519400.png)
 
-### 二、反射的使用步骤
-
+### 二、反射的前提
+> 反射的前提是先获取类对象
 1. 先获取Class对象
 
-   > 获取Class对象的三种方式：（面试题）
-   >
+   > 获取Class对象的三种方式：（面试题）<br>
+   > * 类名.class ：通过类的class属性来获取类对象 <br>
+   > * 对象名.getClass() ：通过对象的getClass()方法来获取类对象 <br>
+   > * Class.forName(全类名) ： 通过Class类的forName方法来获取全类名<br>
    > ![image-20240628113921856](img\image-20240628113921856.png)
 
    > 最优的是第三种方式：
-   >
    > * 第一种通过类名访问，在不同包可能会重名，导致BUG
    > * 第二种要通过对象访问，必须先创建对象，没有对象就无法使用
    > * 只有第三种能保证在任何情况下准确访问到需要的类
+   
+   > 有了类对象后，可以通过getName() 获取全类名
 
 2. 通过类对象.getXXX() 或取类中的任意资源（包括私有的）
 
@@ -24,7 +27,7 @@
 
 ### 三、Java反射存在几种特殊类
 
-> * Class类： 描述类中的信息，它是类对象，也是反射的前提
+> * Class类： 描述类中的信息，它是类对象，`也是反射的前提`
 > * Method类：描述类中的方法，类中有几个方法（包括继承的方法）就有几个Method类。只能描述普通方法
 > * Constructor类：描述类中的构造方法，类中有几个构造方法，就会有几个Constructor类
 > * Field类：描述类中的属性，类中有几个属性（包括继承的属性）就会有几个Field类
@@ -34,13 +37,13 @@
 >
 >
 > ```java
-> //总结：
-> //1.带后缀s : 获取一个数组，数组中是要获取的资源
-> //2.不带后缀s : 获取指定资源，要传入资源名称来指定
-> //3.带中缀Declared :  获取本类的所有资源，可以获取私有资源（但不获取父类的资源）
-> //4.不带中缀Declared : 只能获取本类和父类中的公有资源（只能获取公有资源）
-> //5.私有成员，必须先开启权限才能访问
-> //f1.setAccessible(true); //开启私有访问
+> 总结：
+> 1.带后缀s : 获取一个数组，数组中是要获取的资源
+> 2.不带后缀s : 获取指定资源，要传入资源名称来指定
+> 3.带中缀Declared :  获取本类的所有资源，可以获取私有资源（但不获取父类的资源）
+> 4.不带中缀Declared : 只能获取本类和父类中的`公有资源`（只能获取公有资源）
+> 5.私有成员，必须先开启权限才能访问
+> f1.setAccessible(true); //开启私有访问
 > ```
 
 ### 五、Java反射的应用
@@ -49,50 +52,66 @@
 > * 调用方法
 > * 创建对象
 > * 通过反射实现通用方法的调用。
-
-### 六、调用方法
+#### 1. 通过反射来调用方法
 > 通过反射来修改属性，没有走类中的修改器，不然通过反射来修改私有成员的值，就不需要开权限了
 
-### 七、创建对象
-> 1. 利用Class对象直接创建：
+> 步骤：
+> 1. 获取类对象
+> 2. 从类对象中 获取 方法对象
+> 3. 使用 方法对象 的`invoke()方法`来调用该方法。
+
+#### 2.通过反射来创建对象
+> 1. 通过类对象的newInstance()方法直接创建：
 > * 缺点：只能调用无参构造方法，而且无法设置权限
 > ![img.png](img.png)
-> 将构造方法的权限设置为public后才可以使用：
-> ![img_1.png](img_1.png)
-> 2. 利用构造方法对象创建：
-> 无论哪种方法，反射的底层都会走构造器。
-> * 注意反射的包一定包含了reflect
+> 2. 通过`构造方法类`的newInstance()方法来创建对象：<br>
+>     * a. 通过类对象来获取构造方法对象 : class.getDeclaredConstructor("构造函数名")
+>     * b. 使用构造方法对象的newInstance()来调用构造方法。
+
+> 注意:
+> * 无论哪种方法，反射的底层都会走构造器。
+> * 反射的包一定包含了reflect
 
 ### 八、类加载的时机
+> &emsp;&emsp;在Java中，类的加载是指将类的字节码从文件中读取到内存中，并为之创建一个java.lang.Class对象的过程。
+> <br>&emsp;&emsp;然而，类的加载并不是立即发生的，也不是在编译时完成的，而是在运行时根据需要来加载（即“懒加载”或“按需加载”）。<br>
+> &emsp;&emsp;这意味着类的加载时机取决于其被引用的时间。
+
 > * 创建类的实例（对象）
 > * 调用类的类方法（静态方法）
 > * 访问类的类变量或者给类变量赋值（静态变量）
 > * 使用反射强制性创建某个类的Class对象
 > * 初始化某个类的子类
 > * 使用java.exe命令运行某个主类
-> *……
+> * 使用类对象上锁
+> * ……
 
 ### 九、类加载器规则
+
 > * 类加载器的主要作用：就是加载java类的字节码（.class文件）加载到JVM中（在内存中生成一个该类的Class对象）
 > * JVM启动时，类加载器不会一次性加载所有类，而是根据需要去动态加载（延迟加载：什么时候使用什么时候加载）
-> * 这就说明：大部分java的类只有用到才会去加载，目的是对内存更友好
+> * 这就说明：大部分java的类只有用到才会去加载，目的是节约内存资源，对内存更友好
 
 ### 十、类加载器分类
-> * BootstrapClassLoader: 启动类加载器 
-> > 最顶层类加载器，是由C++实现，通常表示为null，并且没有父级，主要是用来加载JDK内部的核心类库，比如：java.lang.*(JAVA_HOME/lib目录下的内容)
-> * Extension Class Loader：扩展类加载器，主要加载JAVA_HOME/jre/lib/ext目录下的jar包，同时还包括一个系统变量java.ext.dirs加载这个目录下的所有类
-> * AppClassLoader：应用程序类加载器：面向我们用户的类加载器，负责加载Classpath下所有jar包和类。
+> * Bootstrap ClassLoader: 启动类加载器 
+> > 最顶层类加载器，主要是用来加载JDK内部的核心类库，比如：java.lang.*(JAVA_HOME/lib目录下的内容) （是由C++实现，通常表示为null，并且没有父级）
+> * Extension ClassLoader：扩展类加载器
+> > 扩展类加载器负责加载Java的扩展库（一般是在JAVA_HOME/jre/lib/ext目录下的jar包下的所有类）
+> * App ClassLoader：应用程序类加载器(系统类加载器)
+> > 面向我们用户的类加载器，负责加载Classpath下所有jar包和类。
 > ![img_2.png](img_2.png)
 > ![img_3.png](img_3.png)
 
 ### 十一、类加载器的三个特点
-* 双亲委派(面试题)：当一个自定义的类加载器需要加载时，比如java.lang.String。不会上来直接加载它，而是委托给父类加载器去加载，父加载器如果发现自己还有父类，会一直往上找，直接找到最顶层的加载器。
-如果顶层的加载器已经加载java.lang.String 自己这个子类就无需重复加载。如果这几个加载器都没有加载到目标类，就会抛出一个异常：ClassNotFoundException。
+* 双亲委派(面试题)：即一个类加载器在尝试加载某个类之前，会先将其加载请求委派给它的父类加载器。如果父类加载器无法加载该类，子类加载器才会尝试自己去加载。如果这几个加载器都没有加载到目标类，就会抛出一个异常：ClassNotFoundException。
   
+  > 这有助于确保类的唯一性，避免类的多次加载。
 * 负责依赖：如果一个加载器加载某个类，这个类它依赖于另外几个类或接口，也会尝试加载这些依赖项
 
-* 缓存加载：为了提高加载效率，消除重复加载的问题，一旦类被某一个加载器加载，那么它会缓存这个加载的直接使用，就不会再加载了。
-
+* 缓存加载：为了提高加载效率，消除重复加载的问题，一旦类被某一个加载器加载，那么它会缓存这个加载的直接使用，其他加载器就不会再加载了。
+  <br>一个类（Class）在JVM中只会被加载一次,具体来说，当类加载器加载一个类时，它会首先检查这个类是否已经被加载过（即是否已经存在于JVM的类缓存中）。如果已经加载过，那么就直接返回这个类的Class对象引用，而不会再次加载。
+  <br> 类加载的缓存性和唯一性。
+  
 ### 十二、双亲委派的底层源码
 > 1. 检查该类是否已经被加载
 > 2. 当父类加载器不为空，则通过父类加载器加载
@@ -152,19 +171,20 @@ protected Class<?> loadClass(String name, boolean resolve)
 ### 类加载的过程（面试题）
 > 类的生命周期主要分为7个阶段：加载 验证 准备 解析 初始化 使用 卸载
 > 类加载的过程 是属于前面5个阶段
-> * 加载 ： 也可以被称为装载阶段，目的是根据类的全类名，来获取二进制类文件的字节流。
+> * `加载` ： 就是通过类的加载器，将类的字节码文件读取到内存中的过程。
 > 如果找不到就会报NoClass`错误`, 这一步不会检查语法或格式错误。
 > ![img_4.png](img_4.png)
-> * 验证 ： 确保class文件里字节流信息，符合当前虚拟机的要求，不会危害虚拟机安全
+> * `验证` ： 验证class文件里字节流信息，保证其不会危害虚拟机安全
 > ![img_5.png](img_5.png)
-> * 准备 ： 这个阶段会创建一些静态字段，并对其进行初始化操作。会在方法区分配这些变量的所使用的内存空间。
+> * `准备` ：为类变量（即被static修饰的变量）分配内存，并设置默认值。
 > 注意这个阶段还没有执行代码（准备阶段没有执行任何java代码）
 > ![img_6.png](img_6.png)
-> * 解析 ： 主要分为四种情况，类和接口的解析，字段的解析，类方法的解析，接口方法的解析。
-> 比如说：当一个变量引用某个对象时，这个引用在class文件 将原来的符号引用解析为直接内存地址。
+> * `解析` ： 将符号引用(方法名、变量名……）解析为直接内存地址，生成一张对照表(映射表）<br>
+> 主要分为四种情况，类和接口的解析，字段的解析，类方法的解析，接口方法的解析。<br>
 > ![img_7.png](img_7.png)
-> * 初始化 ： JVM规范要求，必须在类的首次主动使用时，才会执行类的初始化操作，包括：类构造方法、static静态变量赋值语句、static静态代码块，如果一个子类初始化，势必会先对其父类初始化
-> 最后必然先把java.lang.Object初始化。
+> * `初始化` ： 即在类被第一次使用时，才执行类的的初始化操作。初始化操作包括：执行静态代码块，给静态变量赋值。
+> <br>类的使用情况包括：类构造方法、static静态变量赋值语句、static静态代码块。
+> <br>如果一个子类初始化，势必会先对其父类初始化，最后必然先把java.lang.Object初始化。
 > ![img_8.png](img_8.png)
 
 ![img_9.png](img_9.png)
