Java学习过程中的疑难杂症

--- a/疑难杂症.md
+++ b/疑难杂症.md
@@ -34,3 +34,808 @@ public class Main{
 
 
 
+### 2. 包装类 和 基本类型
+
+> int > double > 包装类
+
+
+
+### 问题0：
+
+try,catch,finally,return
+
+> try中出现异常后，立即停止执行try语句块，转为执行catch语句块，然后继续执行主语句块中的语句。
+
+
+
+### 问题1：
+
+```java
+public static synchronized void test1(){
+    // 1. 死锁
+    // 2. 爆栈
+    test1();
+}
+S
+private static ReentrantLock lock = new ReentrantLock();
+public static synchronized void test2(){
+    // 1. 死锁
+    // 2. 爆栈
+    lock.lock();
+    test1();
+    lock.unlock();
+}
+```
+
+### 问题2：
+
+```sql
+substring()从1开始， limit从0开始。
+一个保存手机号的表，substring(4, 4)  limit 1,3; 
+
+select substring(number, 4, 4)
+from phone
+limit 1, 3;
+
+-- 11101111111
+-- 22202222222
+-- 33303333333
+-- 44404444444
+-- 55505555555
+-- ……
+-- 99909999999
+
+create table phone(
+number varchar(20)
+);
+insert into phone values 
+(11110111111),
+(22220222222),
+(33330333333),
+(44440444444),
+(55550555555),
+(66660666666),
+(77770777777),
+(88808888888),
+(99909999999);
+
+select substring(number, 4, 4)
+from phone
+limit 1, 3;
+```
+
+### 问题3：
+
+```java
+// 在使用switch时如何避免异常输入？ string + default
+```
+
+### 问题4：
+
+```
+静态方法和类都存储在方法区中，那静态方法会在虚拟机栈中创建栈帧吗？
+	存储在方法区是指：静态方法的字节码存储在方法区中。当静态方法被调用时，会在栈中创建一个新的栈帧，以存储该方法的局部变量、操作数栈等信息。这个栈帧的生命周期与静态方法的执行时间相同，当方法执行完毕后，栈帧会被销毁。但是，与普通方法不同的是，静态方法没有this引用，因为它们不依赖于任何对象实例。
+```
+
+### 问题5：
+
+自动提交事务后再开启事务：
+
+开启事务后`必须手动提交`后才会更新磁盘中的数据。不然select中的和表中的数据不一样。
+
+![image-20240718094612496](D:\Pictures\MySQL\自动提交事务后再开启事务.png)
+
+
+
+### 问题6：
+
+> 当一个任务被提交到线程池后，线程池是怎么处理它的？
+>
+> * 当有空闲的核心线程时：
+> * 当线程数 < 最大线程数时：创建新线程来执行任务
+> * 当线程数 = 最大线程数时：放入任务队列
+> * 当任务队列满了的时候：执行拒绝策略
+
+### 问题7：
+
+> 如何提高读取文件的性能？
+>
+> 数组大小是不是越大越好？什么时候达到性能极限？
+
+
+
+### 问题8：IO流刷新问题
+
+注意写入流的刷新问题：除了FileOutputStream以外的写入流不刷新都不会写到硬盘。只是将要写入的内容暂存到内存中。
+刷新主要有三种方式：1.写满了缓冲区自动刷新  2.使用close()关闭时会自动刷新 3.使用flush()强制刷新
+
+> ```java
+> public class BBO {
+> public static void main(String[] args) throws Exception e{
+>   File file = new File("D:\\test.txt");
+> 
+>   OutputStream os = new FileOutputStream(file);    // 1. 创建原始字节输出流
+>   OutputStream bos = new BufferedOutputStream(os); // 2. 创建缓冲字节输出流
+>   //Writer wr = new FileWriter(file, true);        // 3. 创建字符输出流
+>   //为了提高性能Java对FileWriter做了优化
+> 
+> os.write("man".getBytes(StandardCharsets.UTF_8));
+>   bos.write(" what can i say?".getBytes(StandardCharsets.UTF_8)); //此时缓冲区没有满
+>   //wr.write(" Mamba out!");
+> 
+>   // 此时文件中的内容是？
+>   // a. man （写时覆盖，所以没覆盖）
+>   // b. what can i say? （因为覆盖写入）
+>   // c. man what can i say?
+>   // d. 没有内容
+> 
+>   // 进阶1：加上close的写入的顺序
+> //        File file = new File("D:\\test.txt");
+> //        OutputStream os = new FileOutputStream(file,true);
+> //        Writer wr = new FileWriter(file, true);
+> //        OutputStream bos = new BufferedOutputStream(os);
+> //
+> //        os.write("man".getBytes(StandardCharsets.UTF_8));
+> //        bos.write(" what can i say?".getBytes(StandardCharsets.UTF_8));
+> //        wr.write(" Mamba out!");
+> //        wr.close();
+> //        bos.close();
+> 
+>   // 进阶2：加上try-catch的写入的顺序
+> }
+> }
+> ```
+>
+> `FileOutputStream` 没有内置的缓冲机制，因此它不需要刷新缓冲区来确保数据被写入。每次调用 `FileOutputStream` 的 `write` 方法时，数据都会直接写入到文件中。
+> 而且Java没有对`FileOutputStream`做缓冲优化。
+>
+> 为了提高性能JAVA对`FileWriter`做了优化，它不是直接写到文件中而是先写到缓冲区中。
+
+#### 问题8.2 覆盖写入 和 追加写入
+
+> 覆盖写入并不会删除原文件的内容，只是在写入的结尾加一个终止符EOF，所以写入的内容比源文件短你打开文件还能看到残留的内容，但是你用文件读取就读不出来。
+
+> 在Java中，当您使用`FileOutputStream`以非追加模式（即没有指定第二个参数为`true`）写入到一个已存在的文件时，这是一种覆盖写入（Overwrite）操作。这意味着文件的内容会从文件的开头被新写入的内容所替换。
+>
+> 如果新写入的内容长度小于原文件的内容长度，那么在新内容写入完毕后，原文件中剩余的部分（即没有被新内容覆盖的部分）将不会被删除或清空，但它们在逻辑上已经是不可访问的，因为文件末尾的EOF（文件结束符）标记已经被新内容所覆盖。然而，从物理存储的角度来看，这些“残留”的数据可能仍然存在于磁盘上，直到该文件被新的数据完全覆盖或文件被删除并由文件系统回收空间。
+>
+> 但需要注意的是，从应用程序的角度来看，这些残留的数据是不可见的，也不应该被依赖或访问。当您尝试读取这个文件时，您只会看到新写入的内容，直到达到文件的新长度为止。
+>
+> 如果您想要保留原文件的部分内容并在其后追加新内容，您应该使用追加模式，即在创建`FileOutputStream`时指定第二个参数为`true`。这样，新内容就会从文件的当前末尾开始写入，而不会覆盖文件的原有内容。
+>
+> 总结来说，Java中的覆盖写入是从头开始写入，并且会替换掉原有内容。如果新内容长度小于原内容长度，则原内容的剩余部分在逻辑上被视为不可访问，但从物理存储的角度来看可能仍然存在于磁盘上。要保留原内容并追加新内容，应使用追加模式。
+
+>```java
+>public class BBO {
+>        public static void main(String[] args) throws Exception e{
+>          File file = new File("D:\\test.txt");
+>
+>          OutputStream os = new FileOutputStream(file);    // 1. 创建原始字节输出流
+>          OutputStream bos = new BufferedOutputStream(os); // 2. 创建缓冲字节输出流
+>          Writer wr = new FileWriter(file, true);          // 3. 创建字符输出流
+>          //为了提高性能Java对FileWriter做了优化
+>
+>          wr.write(" Mamba out!");
+>          wr.close();
+>          os.write("man".getBytes());
+>          bos.write(" what can i say?".getBytes()); //此时缓冲区没有满
+>
+>          // 此时文件中的内容和输出的内容是否一致？
+>        }
+>}
+>```
+>
+>
+
+### 问题9：
+
+使用as + 视图\查询语句 创建表，这个新表会有原表的约束、索引吗？
+
+> 不会。
+
+### 问题10：
+
+```java
+public class HelloSogou{
+     public static synchronized void main(String[] a){
+         Thread t=new Thread(){
+             public void run(){Sogou();}
+     	 };
+     	t.run();
+        System.out.print("Hello");
+     }
+     static synchronized void Sogou(){
+     System.out.print("Sogou");
+    }
+}
+//答案为: Sogou Hello.
+```
+
+> Thread t=new Thread(){
+> 	public void run(){Sogou();}
+> };
+>
+> // 这种写法是匿名内部类，这个匿名内部类继承于Thread()，并且还重写了Sogou()方法。
+
+> 在Java中，当你看到在`new`对象时在末尾直接加一个`{}`，这实际上不是一个标准的或直接的语法。然而，这种看起来像是“在末尾加一个`{}`”的情况，很可能是与匿名内部类（Anonymous Inner Class）或初始化块（Initialization Block）混淆了。
+>
+> ![image-20240723100341834](D:\Pictures\匿名内部类.png)
+>
+> ### 匿名内部类
+>
+> 最常见的情况是，`{}`被用于定义匿名内部类的实例或其中的方法实现。例如，当你需要实现一个接口或继承一个类，但不想显式地声明一个新类时，你可以使用匿名内部类。这里的`{}`实际上是匿名内部类的类体。
+>
+> ```java
+> List<String> list = new ArrayList<String>() {  
+>  // 这里的{}是匿名内部类的类体  
+>  // 但这并不是直接在new ArrayList<>()后面加{}，而是作为ArrayList匿名子类的定义  
+> };  
+> 
+> // 更常见的情况是实现接口  
+> Thread thread = new Thread(new Runnable() {  
+>  @Override  
+>  public void run() {  
+>      // 这里的{}是run方法的实现  
+>  }  
+> });
+> ```
+>
+> 但请注意，上面的例子中，`{}`并不是直接跟在`new ArrayList<>()`或`new Runnable()`后面的，而是作为参数传递给构造器或作为匿名内部类的定义。
+>
+> ### 初始化块
+>
+> 初始化块（Instance Initialization Blocks 或 Static Initialization Blocks）是在类中定义的，而不是在`new`语句之后。它们用于初始化对象或类变量。
+>
+> ```java
+> class MyClass {  
+>  {  
+>      // 实例初始化块  
+>  }  
+> 
+>  static {  
+>      // 静态初始化块  
+>  }  
+> }
+> ```
+>
+> ### 可能的误解
+>
+> 如果你看到类似`new MyClass(){}`这样的代码，并且认为`{}`是“在new对象时在末尾加一个{}”，那么实际上这是创建了一个`MyClass`的匿名子类实例。这里的`{}`定义了匿名子类的类体，而不是直接在`new`后面加了一个`{}`。
+>
+> ### 结论
+>
+> 在Java中，没有直接在`new`对象时在末尾加一个`{}`的语法。你可能是在看到匿名内部类的定义时产生了这样的误解。匿名内部类使用`{}`来定义类体或方法体，但这些`{}`并不是直接跟在`new`关键字后面的。
+
+### 问题11：
+
+> byte b = 1;
+> short s = 11;
+>
+> 上面的代码有问题吗?
+> -- 没有，因为在创建变量时，int会自动转为对应类型。
+>
+> short s2 = 111111111;
+> 这会报错吗？
+> 会的，因为它超过了数据范围。Java没有截断机制，而是直接保存。
+
+### 问题12：
+
+> 构造(实例)代码块 和 对象挂钩，每次创建对象都会执行，且是在构造方法前执行。
+> 父类的构造代码块和构造方法 比 子类的构造代码块都快。
+
+### 问题13：
+
+```java
+//内部类对象的super指针指向的是创建它的外部类吗？
+package m;
+
+import java.io.Serializable;
+import java.util.*;
+
+public class Outer {
+    
+    private String name; //D
+    public Outer() {
+        this.name = name;
+    }
+    public Outer(String name) {
+        this.name = name;
+    }
+    
+    class Inner extends Outer{
+        String name = "A";
+        public Inner() {
+            super("B"); //内部类的父类
+            Outer t = Outer.this;
+            t.name = "C";
+        }
+        public void display(){
+            System.out.println(name);
+        }
+    }
+    
+    public void display(){
+        new Serializable(){
+            public void display() {
+                System.out.println(name);
+            }
+        }.display();
+    }
+    
+    public static void main(String[] args) {
+        System.out.println("答错了抄群里发的图中最下面的答案");
+        Outer test = new Outer("D"); //外部类
+        test.display(); //D
+        
+        Outer a = test.new Inner();
+        test.display(); //C
+        a.display(); //A(子类重写父类方法)
+        System.out.println(a.name); //B
+    }
+}
+
+// 答案：DCAB
+```
+
+```java
+//内部类对象的super指针指向的是创建它的外部类吗？
+public class Outer {
+    class Inner extends Outer{
+        public Inner() {
+            super(); //内部类的父类
+            Outer t = Outer.this;
+        }
+    }
+
+    public static void main(String[] args) {
+        Outer test = new Outer();
+        Outer a = test.new Inner();
+    }
+}
+//这里的super()和t和test三者之间的关系。
+```
+
+```java
+// 问题13.2 父与子 
+class Father {
+	public int a = 1;
+	public void print() {
+		System.out.println("father");
+	}
+}
+
+class Son extends Father{
+	public int a = 2;
+	public void print() {
+		System.out.println("s");
+	}
+}
+public class Test {
+	public static void main(String[] args) {
+		Father f = new Son();
+		System.out.println(f.a);
+		f.print();
+	}
+}
+
+// 1 son
+```
+
+```java
+// 问题13.3 父与子 内与外
+class Father {
+	public int a;
+    public Father(int a){
+        this.a = a;
+    }
+	class Son extends Father{
+        public int a = 2;
+        public Son(int a) {
+            super(a);
+        }
+	}
+}
+
+public class Test {
+    public static void main(String[] args) {
+        Father f1 = new Father(1);
+        Father f2 = f1.new Son(3);
+        System.out.println(f1.a);
+        System.out.println(f2.a);
+        System.out.println(((Father.Son)f2).a);
+    }
+}
+
+// 1 3 2
+```
+
+### 问题14：String的对象创建问题
+
+```java
+//下面这条语句一共创建了多少个对象：
+String s = "welcome" + "to" + 360;
+```
+
+> 答案是1个对象，首先编译器在处理字符串常量的拼接会进行优化：在编译阶段，编译器会将常量字符串的拼接结果进行计算，直接用拼接后的结果替换原来的字符串拼接表达式。这种优化被称为==常量折叠==（constant folding）。其次之前已经创建过了，所以不会创建。
+
+```java
+public class T14 {
+    public static void main(String[] args) {
+        String test = "java and python";
+        //输出
+        System.out.println(test==("java "+"and "+"python")); //创建了几个对象？ -- 0个
+        String str1 = "java ";
+        String str2 = "and ";
+        String str3 = "python";
+        System.out.println(test==(str1 +str2 +str3));
+    }
+}
+```
+
+```java
+//找到项目的out目录，找到class文件，用IDEA打开，可以看到编译后的代码文件：
+public class T14 {
+    public T14() {
+    }
+
+    public static void main(String[] args) {
+        String test = "javaandpython";
+        System.out.println(test == "javaandpython"); //true
+        String str1 = "java";
+        String str2 = "and";
+        String str3 = "python";
+        System.out.println(test == str1 + str2 + str3); //false
+    }
+}
+```
+
+
+
+### 问题15：如何把一个对象通过网络传输给另一方？
+
+```java
+InputStream is=client.getInputStream();
+OutputStream os=client.getOutputStream();
+ObjectOutputStream oos=new ObjectOutputStream(os);
+```
+
+### 问题16:PreparedStatement对象
+
+```java
+// 以下JDBC代码存在什么问题？
+public static ResultSet query2(String name) throws ClassNotFoundException, SQLException {
+    //0. 加载驱动类
+    Class.forName(dirver);
+    //1. 创建连接对象
+    Connection conn = DriverManager.getConnection(url, username, password);
+    //2. 创建预处理报告对象
+    String sql = "select * from user where name=?";
+    PreparedStatement pstmt = conn.prepareStatement(sql);
+    //3. 使用PreparedStatement的setXXX()方法对sql语句中的？进行替换
+    pstmt.setString(1, name);
+    //4. 使用PreparedStatement对象的executeQuery()方法进行查询 
+    ResultSet rs = pstmt.executeQuery(sql);
+    
+    //5. 关闭资源（放在外面关闭因为还要把Resultset对象交给外面使用）
+    return rs;
+}
+```
+
+### 问题17：如果觉得普通的互斥锁和sychronized效率比较低我们该怎么做？
+
+> 读写锁、悲观锁
+
+### 问题18：
+
+> 在讨论`int`和`Integer`的最大值时，我们需要区分这两个类型：`int`是Java中的一个基本数据类型（primitive type），而`Integer`是`int`的一个包装类（wrapper class），位于`java.lang`包中。
+>
+> ### int的最大值
+>
+> `int`是一个32位的整型数据，其范围是从`-2^31`到`2^31 - 1`。因此，`int`的最大值是`2^31 - 1`，也就是`2147483647`。
+>
+> ### Integer的最大值
+>
+> 由于`Integer`是`int`的包装类，它表示的值范围与`int`完全相同。因此，当我们说`Integer`的最大值时，我们指的是它可以表示的最大`int`值，即`2147483647`。
+>
+> 但是，这里有一点需要注意：`Integer`类还包含了一些静态的常量，比如`Integer.MAX_VALUE`，这个常量就是用来表示`Integer`（实际上是`int`）可以表示的最大值的，其值也是`2147483647`。
+>
+> ### 总结
+>
+> - `int`的最大值是`2147483647`。
+> - `Integer`的最大值（指它可以包装的`int`的最大值）也是`2147483647`，并且可以通过`Integer.MAX_VALUE`常量来获取这个值。
+>
+> `Integer`类还提供了许多其他有用的方法和常量，比如`Integer.MIN_VALUE`（`int`的最小值，即`-2147483648`），以及将字符串转换为`Integer`对象的`parseInt(String s)`方法等。
+
+
+
+### 问题19：负数的位运算
+
+> 负数进行位运算时，使用的是**补码**。在计算机中，负数并不是直接以源码（原码）的形式进行存储和运算的，而是以补码的形式。这是因为补码表示法能够简化计算机内部对符号数的处理，使得加法和减法运算可以使用同一套电路来完成，提高了计算机的效率。
+>
+> 在32位二进制系统中，`-2147483648`（即`-2^31`）的补码表示非常特殊，因为它正好是`int`类型能表示的最小负数值。在补码表示法中，`-2147483648`的补码和源码（在这种情况下，由于它是`int`类型的最小值，源码和补码相同）都是`1000 0000 0000 0000 0000 0000 0000 0000`（二进制形式）。
+
+```java
+Integer I = Integer.MAX_VALUE;
+I++;
+System.out.println(I == Integer.MIN_VALUE);
+
+int i = Integer.MAX_VALUE;
+i++;
+System.out.println(i == Integer.MIN_VALUE);
+```
+
+```java
+        Integer i = Integer.MAX_VALUE;
+        System.out.println(i);
+        //-2147483648的补码就是10000000 00000000 00000000 00000000。
+        Integer ii = i+1;
+        System.out.println(ii);
+        //负数在进行右移操作时，无论是逻辑右移还是算术右移，都会在其左侧补符号位，即补1。
+        int front = ii >> 31;
+        System.out.println(front);
+        if(ii < i){
+            System.out.println("i 大于 ii");
+        } else {
+            System.out.println("i 小于 ii");
+        }
+        Integer min = Integer.MIN_VALUE;
+        System.out.println(min);
+
+```
+
+### 问题20：数字和字符串之间的互相转换
+
+```Java
+        String si = "12345";
+        int iii = Integer.parseInt(si);
+        System.out.println(iii);
+        String sd = "12345.9";
+        Double ddd = Double.parseDouble(sd);
+        System.out.println(ddd);
+```
+
+### 问题21： 日期类型
+
+```java
+// jdbc的日期类型问题：
+// a.实体类中的日期类型，
+// b.PreparedStatement对象的setDate()方法中要传入的日期类型
+// c.如何转换？
+//   string -> Util.Date -> sql.Date ?
+static SimpleDateFormat sdf=new SimpleDateFormat("yyyy-MM-dd");
+String time = "2024-01-01";
+sdf.parse(time);
+pstmt.setDate(2,new java.sql.Date(user.getTime().getTime()));
+```
+
+### 问题22：main函数的参数的参数名 和 接口的修饰符 和 Java变量的命名规范
+
+```java
+abstract interface A{
+    int a.b = 1; //
+}
+protected interface B{ //
+    float b$c = 'b';
+}
+class C implements A,B{
+    public static void main(String a[]) { ////参数名称可以是任意的
+        a.b = (int)true; //常量不能被修改
+    }
+}
+```
+
+### 问题23：Java控制double类型数据的格式？
+
+> ##### 第一：
+>
+> **使用printf进行类似C语言格式输出：**
+>
+> ```java
+> System.out.printf("%.2f", n);
+> ```
+>
+> ##### 第二
+>
+> **使用Strin.format()**
+>
+> ```java
+> System.out.println(String.format("%.2f", n));
+> ```
+>
+> ##### 第三
+>
+> ##### 在Java中，控制`double`类型数据的格式通常是通过`DecimalFormat`类来实现的，这个类位于`java.text`包中。`DecimalFormat`允许你定义数字、百分比、货币等的格式。对于`double`类型的数据，你可以通过定义模式字符串（pattern string）来指定其格式，比如小数点后的位数、是否包含千位分隔符等。
+>
+> 以下是一个简单的示例，展示了如何使用`DecimalFormat`来控制`double`类型数据的格式：
+>
+> ```java
+> import java.text.DecimalFormat;
+> 
+> public class DecimalFormatExample {
+>  public static void main(String[] args) {
+>      double number = 123456789.123456789;
+> 
+>      // 创建一个DecimalFormat实例，指定小数点后保留两位
+>      DecimalFormat df = new DecimalFormat("#.##");
+> 
+>      // 使用format方法格式化数字
+>      String formattedNumber = df.format(number);
+> 
+>      // 输出格式化后的数字
+>      System.out.println(formattedNumber); // 输出: 123456789.12
+> 
+>      // 如果需要包含千位分隔符
+>      df = new DecimalFormat("#,###.##");
+>      formattedNumber = df.format(number);
+>      System.out.println(formattedNumber); // 输出: 123,456,789.12
+> 
+>      // 还可以定义其他格式，比如百分比
+>      df = new DecimalFormat("###.##%");
+>      formattedNumber = df.format(number / 100); // 注意：这里将number除以100以得到百分比
+>      System.out.println(formattedNumber); // 输出: 1234567.89%
+>  }
+> }
+> ```
+>
+> 在上面的示例中，我们首先创建了一个`DecimalFormat`实例，并通过构造函数传递了一个模式字符串来定义数字的格式。模式字符串中的`#`表示数字（包括0和非0数字），`.`表示小数点，`,`表示千位分隔符，而`%`则用于表示百分比格式。
+>
+> 通过`format`方法，我们可以将`double`类型的数字转换成格式化的字符串。这对于在用户界面上展示数字、生成报告或日志等场景非常有用。
+>
+> 记住，`DecimalFormat`是非常灵活的，你可以通过定义不同的模式字符串来实现各种复杂的数字格式化需求。
+
+### 问题24：本地线程变量
+
+> ```java
+> // 下面打印几次 哈喽？ --1次 set()设置的本地线程变量只对当前线程有效。
+> public class Main extends Thread{
+> 
+>     ThreadLocal<String> threadLocal = new ThreadLocal<>();
+>     public Main(){
+>         threadLocal.set("哈喽");
+>     }
+>     @Override
+>     public void run() {
+>         System.out.println(threadLocal.get());
+>     }
+> 
+>     public static void main(String[] args) throws InterruptedException {
+>         Main m = new Main();
+>         Thread t1 = new Thread(m);
+>         Thread t2 = new Thread(m);
+>         t1.start();
+>         t1.join();
+>         t2.start();
+>         t2.join();
+>         new Thread(()->{
+>             System.out.println(m.threadLocal.get());
+>         }).start();
+>         System.out.println(m.threadLocal.get());
+>     }
+> }
+> ```
+>
+
+### 问题25：Arraylist集合的扩容机制？
+
+> 一次性插入25个数据会发生什么？
+
+### 问题26：Mysql中的类型转换：
+
+> select '10'>'9' union all  -- 0 比的是ASCII码1和9比 
+> select 10>'9' union all    -- 1 '9'转换为了数字9和10比较
+> select '10'>9 union all    -- 1
+> select 10>9;                     -- 1
+
+### 问题27：
+
+```jsp
+<form action="/user?id=123" method="post">
+  <input type="text" name="${u.name}"  value="456" />
+  <input type="submit" />
+</form>
+<form action="/user?id=abc" method="get">
+  <input type="text" name="${u.name}"  value="efg" />
+  <input type="submit" />
+</form>
+
+后端：
+protected void doPost(HttpServletRequest req, HttpServletResponse resp) 
+            throws ServletException, IOException {
+String id = request.getParameter("id");
+ System.out.println("收到的ID: " + id);
+}
+protected void doget(HttpServletRequest request, HttpServletResponse response) 
+            throws ServletException, IOException {
+String id = request.getParameter("id");
+ System.out.println("收到的ID: " + id);
+}
+当${u.name}恰好等于"id"时，两个表单分别提交，输出的结果是什么
+```
+
+### 问题28：索引
+```sql
+create table a(
+    `id` int PRIMARY key,
+    `name` varchar(10),
+        `age` int not null,
+        `phone` varchar(20),
+        index name_key(`age`,`name`)
+);
+
+
+explain select age from a where name='2';
+走了哪个索引，走索引的过程说一下。
+-- 最左匹配原则是在多个查询条件的情况下才会失效。
+```
+
+### 问题29：一个线程可以被启动多次吗？如果我想重复执行一个线程的任务怎么办？
+
+```java
+public class Demo1 extends Thread{
+    public void run() {
+		String name = Thread.currentThread().getName();
+		for (int i = 0; i < 10; i++) {
+            System.out.println(name + " " + i);
+        }
+    }
+
+    public static void main(String[] args) throws InterruptedException {
+        Demo1 d1 = new Demo1();
+        d1.setName("d1"); // 设置线程的名字
+        Demo1 d2 = new Demo1();
+        d2.setName("d2"); // 设置线程的名字
+
+        d1.start();
+        d2.start();
+        d1.join();
+        d1.start();
+    }
+}
+
+```
+
+> 1. **线程的启动（`start()` 方法）**：每个线程对象只能被启动一次。调用 `start()` 方法后，线程开始执行其 `run()` 方法中的代码。如果尝试对一个已经启动的线程再次调用 `start()` 方法，将会抛出 `IllegalThreadStateException`。
+> 2. 如果你想要 `d1` 线程执行相同的任务，你需要创建一个新的线程对象.
+
+### 问题30：如何用Cookie实现免登录？
+
+> ```java
+> 后端：
+> String pw=req.getParameter("pw");
+> if(un.equals("admin")&&pw.equals("123")){
+> 	Cookie c=new Cookie("un",un);
+> 	c.setMaxAge(300);
+> 	resp.addcookie(c);
+> 	//登录成功
+> 	resp.sendRedirect("XXX.jsp");
+> }else{
+> 	//登录失败
+> 	resp.sendRedirect("login.jsp");
+> }
+> ```
+>
+> ```jsp
+> 前端：
+> <%
+> 	Cookiell cs=request.getCookies();
+> 	for(Cookie c:cs){ 
+> //Cookie不止有一个，每个会话都会有一个Cookie,所以我们要遍历Cookie集合，通过key来找到我们需要的Cookie。
+> 		if(c.getName().equals("un")) 
+> 			response.sendRedirect("XXX.jsp")
+> 	}
+> %>
+> ```
+>
+> 进阶：如果我想要记录用户信息怎么办？
+
+### 问题31. 定义泛型函数
+
+> ```java
+> //获取mapper接口实现类，使用泛型来实现，<A>是在定义泛型A（泛型必须先定义才能使用）
+> public static <A> A getMapper(Class<A> c) {
+>     //3.创建session(不是会话HttpSession，是SqlSession)
+>     session = sf.openSession();
+>     //4.通过session动态创建Mapper接口的实现类
+>     return session.getMapper(c);
+> }
+> ```
