--- a/疑难杂症.md
+++ b/疑难杂症.md
@@ -833,9 +833,42 @@ public class Demo1 extends Thread{
 > ```java
 > //获取mapper接口实现类，使用泛型来实现，<A>是在定义泛型A（泛型必须先定义才能使用）
 > public static <A> A getMapper(Class<A> c) {
->     //3.创建session(不是会话HttpSession，是SqlSession)
->     session = sf.openSession();
->     //4.通过session动态创建Mapper接口的实现类
->     return session.getMapper(c);
+>  //3.创建session(不是会话HttpSession，是SqlSession)
+>  session = sf.openSession();
+>  //4.通过session动态创建Mapper接口的实现类
+>  return session.getMapper(c);
 > }
 > ```
+
+### 问题32. 命名规则
+
+> 类名不是关键字
+>
+> ```java
+> String String=”String”;
+> int main = 1;
+> System.out.println(String);
+> 
+> A.String
+> B.不知道
+> C.编译出错
+> D.运行出错
+> ```
+
+### 问题33. 字符串拼接底层
+
+> ```
+> 下面（）不是String类提供的合法的方法 (10分)
+> 
+> 1. append()
+> 2. trim()
+> 3. equals(String)
+> 4. indexOf()
+> ```
+>
+> ### 1. 使用加号（`+`）
+>
+> 当在Java中使用加号（`+`）来拼接字符串时，实际上编译器会进行一定的优化。如果字符串常量在编译时就能确定，编译器会尝试使用字符串常量池来优化这些操作。然而，对于在运行时才能确定的字符串拼接，编译器会将其转换为使用`StringBuilder`（在Java 9之前）或`StringConcatFactory`（Java 9及以后）的调用。
+>
+> - **Java 9之前**：编译器会将字符串拼接转换为使用`StringBuilder`的`append`方法。例如，`String s = "Hello, " + "world!";` 可能会被转换为类似 `new StringBuilder().append("Hello, ").append("world!").toString();` 的形式。
+> - **Java 9及以后**：引入了`StringConcatFactory`，这是一种更优化的字符串拼接方式，特别是在处理大量字符串拼接时。Java 9的编译器会尝试使用`invokedynamic`指令和`StringConcatFactory`来优化字符串拼接，这可以进一步减少中间对象的创建和垃圾回收的压力。
