复习servlet 和 前端

--- a/sc240601/前端/前端效果/前端效果.md
+++ b/sc240601/前端/前端效果/前端效果.md
@@ -105,11 +105,11 @@
 
 ### 4. 如果form表单有两个提交按钮提交数据到不同页面该怎么控制？
 
-> ![image-20240810131328551](D:\Desktop\前端效果\ReadmeImg\一个form多个button.png)
+> ![image-20240810131328551](D:\Desktop\gitee\java-learning\sc240601\前端\前端效果\ReadmeImg\一个form多个button.png)
 >
-> ![img](D:\Desktop\前端效果\ReadmeImg\一个form多个button2.png)
+> ![img](D:\Desktop\gitee\java-learning\sc240601\前端\前端效果\ReadmeImg\一个form多个button2.png)
 >
-> ![image-20240810142722105](D:\Desktop\前端效果\ReadmeImg\formaction属性.png)
+> ![image-20240810142722105](D:\Desktop\gitee\java-learning\sc240601\前端\前端效果\ReadmeImg\formaction属性.png)
 >
 > ```html
 >     <form action="" name="myForm" method="post"> <!-- 把整个table包裹起来 -->
@@ -120,16 +120,19 @@
 >     <button type="button" onclick="markRead()">批量标记已读</button>
 > ```
 >
-> 
 
 ### 5. 鼠标单击事件
 
 > 登出要删除session作用域中的所有信息。
 >
-> ![image-20240810145940185](D:\Desktop\前端效果\ReadmeImg\鼠标单击事件.png)
+> ![image-20240810145940185](D:\Desktop\gitee\java-learning\sc240601\前端\前端效果\ReadmeImg\鼠标单击事件.png)
 
 ### 6. js验证正则表达式
 
 > 验证正则表达式要使用js为变量提供的test()方法，验证成功返回true，验证失败返回false
 >
-> ![image-20240810150155722](D:\Desktop\前端效果\ReadmeImg\js验证正则表达式.png)
+> ![image-20240810150155722](D:\Desktop\gitee\java-learning\sc240601\前端\前端效果\ReadmeImg\js验证正则表达式.png)
+
+### 7.`href="javascript:void(0)"` 
+
+> `href="javascript:void(0)"` 是一种在HTML中常用的技巧，用于创建一个链接（`<a>` 标签），但点击这个链接时不会执行页面跳转或重新加载。这里的 `javascript:void(0)` 是一个JavaScript表达式，`void` 是一个操作符，它会执行一个表达式但不返回任何值（即返回 `undefined`）。由于表达式的结果是 `undefined`，这不会改变当前页面的URL，因此页面不会跳转或刷新。
