--- a/sc240601/前端/前端效果/前端效果.md
+++ b/sc240601/前端/前端效果/前端效果.md
@@ -136,3 +136,86 @@
 ### 7.`href="javascript:void(0)"` 
 
 > `href="javascript:void(0)"` 是一种在HTML中常用的技巧，用于创建一个链接（`<a>` 标签），但点击这个链接时不会执行页面跳转或重新加载。这里的 `javascript:void(0)` 是一个JavaScript表达式，`void` 是一个操作符，它会执行一个表达式但不返回任何值（即返回 `undefined`）。由于表达式的结果是 `undefined`，这不会改变当前页面的URL，因此页面不会跳转或刷新。
+
+### 8. 弹窗确认效果
+
+> 
+>
+> ```html
+> <a onclick="return confirm('确定退出?')" href="/user?type=logout">登出</a>
+> ```
+>
+> - `return confirm('确定退出?')`这段代码的作用是：当用户点击链接时，显示一个确认对话框，对话框中显示“确定退出?”的文字。如果用户点击“确定”，`confirm()`函数返回`true`，链接的`href`属性才会生效，浏览器跳转到指定的URL；如果用户点击“取消”，`confirm()`函数返回`false`，链接的`href`属性不会生效，浏览器不会跳转到其他页面。
+
+> `confirm()` 函数是一个 JavaScript 内置函数，用于显示一个带有确定和取消按钮的对话框，以及一段消息，要求用户进行确认或取消。这个函数会返回一个布尔值，如果用户点击“确定”按钮，则返回 `true`；如果用户点击“取消”按钮，则返回 `false`。
+>
+> 这个函数通常用于在用户执行某些重要操作前，要求用户进行二次确认，以防止误操作。例如，在用户提交表单、删除数据或退出登录时，可以使用 `confirm()` 函数来弹出一个确认对话框，询问用户是否真的要执行这个操作。
+>
+> 下面是一个使用 `confirm()` 函数的简单示例：
+>
+> ```javascript
+> if (confirm('你确定要执行这个操作吗？')) {
+> // 如果用户点击“确定”，则执行这里的代码
+> console.log('用户点击了确定');
+> } else {
+> // 如果用户点击“取消”，则执行这里的代码
+> console.log('用户点击了取消');
+> }
+> ```
+>
+> 在这个示例中，当用户点击一个按钮或链接，并且触发了这段 JavaScript 代码时，会弹出一个确认对话框。根据用户的选择，会执行不同的代码块。
+>
+> confirm -- 确认
+
+### 9. JS函数
+
+> ![image-20240814095825814](D:\Desktop\gitee\java-learning\sc240601\前端\前端效果\ReadmeImg\image-20240814095825814.png)
+
+### 10. 在js中按 name 和 id属性 获取元素
+
+> 在JavaScript中，根据元素的`id`和`name`属性获取元素是常见的操作，但两者在方法和使用场景上有所不同。
+>
+> ### 按`id`属性获取元素
+>
+> 在HTML中，`id`属性是唯一的，即每个元素的`id`值在文档中必须是唯一的。因此，使用`id`来获取元素是最高效且最推荐的方式。JavaScript提供了`document.getElementById()`方法来根据元素的`id`获取该元素。
+>
+> **示例代码**：
+>
+> HTML部分：
+> ```html
+> <div id="myDiv">Hello, World!</div>
+> ```
+>
+> JavaScript部分：
+> ```javascript
+> var myElement = document.getElementById("myDiv");
+> console.log(myElement.textContent); // 输出: Hello, World!
+> ```
+>
+> ### 按`name`属性获取元素
+>
+> 与`id`不同，`name`属性在HTML中不是唯一的，多个元素可以共享相同的`name`值（尤其是在表单元素中，如`<input>`、`<select>`等）。因此，使用`name`属性来获取元素时，通常会返回一个包含所有具有该`name`值的元素的集合（在HTMLCollection或NodeList中）。
+>
+> JavaScript提供了几种方法来根据`name`属性获取元素，但最常用的可能是`document.getElementsByName()`方法。
+>
+> **示例代码**：
+>
+> HTML部分：
+> ```html
+> <input type="text" name="username" value="John Doe">
+> <input type="text" name="username" value="Jane Doe">
+> ```
+>
+> JavaScript部分：
+> ```javascript
+> var elements = document.getElementsByName("username");
+> for (var i = 0; i < elements.length; i++) {
+>     console.log(elements[i].value); // 分别输出: John Doe 和 Jane Doe
+> }
+> ```
+>
+> ### 注意事项
+>
+> - `document.getElementById()`返回的是一个具体的DOM元素，而`document.getElementsByName()`返回的是一个包含所有匹配元素的HTMLCollection或NodeList。
+> - 由于`id`是唯一的，所以`document.getElementById()`在找不到元素时会返回`null`。而`document.getElementsByName()`即使没有找到任何元素，也会返回一个空的HTMLCollection或NodeList。
+> - 在处理表单元素时，`name`属性尤为重要，因为它常用于表单数据的提交和JavaScript中的元素选择。然而，在需要唯一标识元素时，应优先考虑使用`id`属性。
