--- a/疑难杂症.md
+++ b/疑难杂症.md
@@ -229,7 +229,7 @@ limit 1, 3;
 
 ### 问题9：
 
-使用as + 视图\查询语句 创建表，这个新表会有原表的约束、索引吗？
+使用as + 查询视图\查询语句 创建表，这个新表会有原表的约束、索引吗？
 
 > 不会。
 
@@ -817,10 +817,10 @@ public class Demo1 extends Thread{
 > ```jsp
 > 前端：
 > <%
-> 	Cookiell cs=request.getCookies();
+> 	Cookie[] cs=request.getCookies();
 > 	for(Cookie c:cs){ 
 > //Cookie不止有一个，每个会话都会有一个Cookie,所以我们要遍历Cookie集合，通过key来找到我们需要的Cookie。
-> 		if(c.getName().equals("un")) 
+> 	if(c.getName().equals("un")) 
 > 			response.sendRedirect("XXX.jsp")
 > 	}
 > %>
@@ -872,3 +872,135 @@ public class Demo1 extends Thread{
 >
 > - **Java 9之前**：编译器会将字符串拼接转换为使用`StringBuilder`的`append`方法。例如，`String s = "Hello, " + "world!";` 可能会被转换为类似 `new StringBuilder().append("Hello, ").append("world!").toString();` 的形式。
 > - **Java 9及以后**：引入了`StringConcatFactory`，这是一种更优化的字符串拼接方式，特别是在处理大量字符串拼接时。Java 9的编译器会尝试使用`invokedynamic`指令和`StringConcatFactory`来优化字符串拼接，这可以进一步减少中间对象的创建和垃圾回收的压力。
+>
+> > 在Java中，`String` 类的 `trim()` 方法用于去除字符串两端的空白字符。这里的空白字符包括：空格、制表符（`\t`）、换行符（`\n`）、回车符（`\r`）、换页符（`\f`）、换行符（`\n`，注意这里与换行符重复了，但通常指的是在不同操作系统中的换行表示，如Windows中的`\r\n`）、回车符（`\r`，再次提及以强调其在不同上下文中的意义）以及Unicode中的任何空白字符（如`\u0020`，即空格）。
+> >
+> > `trim()` 方法不会修改原始字符串，因为Java中的字符串是不可变的（immutable）。相反，它会返回一个新的字符串，该字符串是原始字符串的一个副本，但去除了两端的空白字符。
+
+### 问题34. 静态变量和静态代码块的执行顺序
+
+```java
+public class Solution {
+    static int b=Test.i;
+    static {
+        System.out.println(b);
+        b=Test.Nas();
+    }
+
+    public static void main(String[] args) {
+        System.out.println(100);
+    }
+}
+class Test{
+    static int Aas(){
+        System.out.println(20);
+        return  20;
+    }
+    static int Nas(){
+        System.out.println(30);
+        return  30;
+    }
+    static {
+        i=40;
+    }
+    static int  i=Aas();
+}
+
+20
+20
+30
+100 ?
+```
+
+### 问题35.  一级缓存和二级缓存
+
+>  每次查询一级缓存 和 二级缓存都会保存，关闭一级缓存不会对二级缓存有影响。
+>
+> ```java
+> @Test
+> public void testTwoCache(){
+> 
+>     HuserMapper mapper= MybatisUtil.getMapper(HuserMapper.class);
+> 
+>     Huser u= mapper.selectByPrimaryKey(15);
+>     System.out.println(u);
+> 
+>     //修改数据  一级和二级都会清空缓存
+>     u.setPassword("999999");
+>     mapper.updateByPrimaryKey(u);
+>     mapper.selectByPrimaryKey(15);
+>     MybatisUtil.close(); //再关闭一次 为了测试二级缓存是否会清除
+> 
+> 
+>     mapper= MybatisUtil.getMapper(HuserMapper.class);
+>     u=mapper.selectByPrimaryKey(15);
+>     System.out.println(u);
+>     MybatisUtil.close();
+> }
+> ```
+
+### 问题36. 类加载器
+
+>  怎么获取类加载器 和 它的父类加载器。
+>
+> ```
+> 我们有这3个类加载器
+> AppClassLoader应用程序类加载器
+> ExtClassLoader扩展类加载器
+> BootstrapClassLoader 启动类加载器
+> class Test{/*复习一下，老师讲过的
+> 
+>     public static void main(String[]arg){
+> 
+>         ClassLoader c  =Test.class.getClassLoader();  //获取Test类的类加载器AppClassLoader
+> 
+>         System.out.println(c);
+> 
+>         ClassLoader c1=c.getParent();  //获取c这个类加载器的父类加载器
+> 
+>         System.out.println(c1);
+> 
+>         ClassLoader c2=c1.getParent();//获取c1这个类加载器的父类加载器
+> 
+>         System.out.println(c2); //null?
+> 
+>     }
+> }
+> /*最后输出什么？*/
+> ```
+>
+
+### 问题37. 如何设计一个HashMap
+
+> 底层数据结构，put方法
+
+### 问题38. 数据范围
+
+> // 两个数字相乘的结果先转为int
+>
+> ```java
+> class Solution {
+>     public static void main(String[] args) {
+>         //下面正确计算并输出正确结果都有哪些？
+>         var z=11*11;
+>         var a=100000000*100000; //乘法的结果先转为int
+>         var b= Long.valueOf(100000000) *100000;
+>         var c=Short.valueOf("100")*Short.valueOf("100");
+>         var c1=Short.valueOf("10000");
+>         var d=100000000*100000*1.0;
+>         var e=1.0*100000000*100000;
+>         var f=(long)100000000*(short)10000*1.0;
+>         System.out.println(z+1);                
+>         System.out.println(a);                  
+>         System.out.println(b);                  
+>         System.out.println(c1.equals(c));       
+>         System.out.println(d);                  
+>         System.out.println(e);                  
+>         System.out.println(f);                  
+> 
+>         //答案：big keng。4.duan cheng duan  to  be  int，so c1.equals jieguo  is  false。//5 6，first is fudian  or int。
+>     }
+> }
+> ```
+>
+> 
