--- a/sc240601/前端/前端效果/前端效果.md
+++ b/sc240601/前端/前端效果/前端效果.md
@@ -132,6 +132,43 @@
 > 验证正则表达式要使用js为变量提供的test()方法，验证成功返回true，验证失败返回false
 >
 > ![image-20240810150155722](D:\Desktop\gitee\java-learning\sc240601\前端\前端效果\ReadmeImg\js验证正则表达式.png)
+>
+> ```js
+>     function agreement(){
+>         const ua = document.getElementById("userAgreement").checked; //.checked 属性来检查这个元素（应该是一个单选按钮或复选框）是否被选中。
+>         const form1= document.getElementById("form1");
+>         const phone = document.getElementById("phone").value;
+>         const password = document.getElementById("password").value;
+>         const t_password = document.getElementById("t_password").value;
+> 
+>         let money = document.getElementById("money").value;
+>         //获取用户选择的option
+>         const select = document.getElementById("serviceId"); // 获取select标签
+>         const sid = document.getElementById("serviceId").value; //获取用户的选择
+>         const options = select.getElementsByTagName('option'); // 获取所有option元素
+>         //1. 使用getElementsByTagName
+>         //这个方法可以获取到指定元素下所有指定标签名的子元素。对于<select>元素，你可以使用它来获取所有的<option>元素。
+>         let price = 0;
+>         for (var i = 0; i < options.length; i++) {
+>             if(options[i].value == sid) {
+>                 price = options[i].dataset.price;
+>             }
+>         }
+>         var phonem = /^\d{1,12}/;
+>         var balance = (money-price);
+>         if(phone == "") {
+>             alert("账号不能为空！");
+>         } else if(!phonem.test(phone)) {
+>             alert("请输入符合条件的账号！");
+>         } else if(password == "") {
+>             alert("密码不能为空！");
+>         } else if(!password.match('^[A-Za-z0-9]+$')) {
+>             alert("请输入符合条件的密码！");
+>         }
+>     }
+> ```
+>
+> 
 
 ### 7.`href="javascript:void(0)"` 
 
@@ -210,7 +247,7 @@
 > ```javascript
 > var elements = document.getElementsByName("username");
 > for (var i = 0; i < elements.length; i++) {
->     console.log(elements[i].value); // 分别输出: John Doe 和 Jane Doe
+>  console.log(elements[i].value); // 分别输出: John Doe 和 Jane Doe
 > }
 > ```
 >
@@ -219,3 +256,33 @@
 > - `document.getElementById()`返回的是一个具体的DOM元素，而`document.getElementsByName()`返回的是一个包含所有匹配元素的HTMLCollection或NodeList。
 > - 由于`id`是唯一的，所以`document.getElementById()`在找不到元素时会返回`null`。而`document.getElementsByName()`即使没有找到任何元素，也会返回一个空的HTMLCollection或NodeList。
 > - 在处理表单元素时，`name`属性尤为重要，因为它常用于表单数据的提交和JavaScript中的元素选择。然而，在需要唯一标识元素时，应优先考虑使用`id`属性。
+
+### 11. 如何规范表格的内容的小数位数？
+
+```html
+### 15.如何规范表格的内容的小数位数？
+<tbody>
+    <c:forEach var="l" items="${list}"> <!--使用EL表达式一定要先在page标签中开启-->
+        <tr>
+            <td>${l.id}</td>
+            <td><a href="/user?type=update&id=${l.id}&ddspid=${l.ddsp.id}">${l.phone}</a></td>
+            <td name="money" style="front()">${l.money}</td>
+            <td>${l.ddsp.name}</td>
+            <!--自己不能删除自己-->
+            <td><a <c:if test="${l.id==user.id}">disabled</c:if>href="/user?type=del&id=${l.id}">删除</a></td>
+		</tr>
+	</c:forEach>
+
+</tbody>
+
+<script>
+    // 假设页面已经加载，并且DOM元素已经可用
+    // 如何规范表格的内容的小数位数
+    document.addEventListener('DOMContentLoaded', function() {
+        var cell = document.getElementsByName("money");
+        for(let i = 0; i <cell.length; ++i) {
+            cell[i].textContent = parseFloat(cell[i].textContent).toFixed(2);
+        }
+    });
+</script>
+```
